# enterprise-genai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
infra/azure/: DEPLOY.md  main.bicep  parameters.prod.json
infra/docker/: otel-collector.yaml
infra/docker/prometheus/: prometheus.yml
scripts/: create_token.py  index_samples.py
src/agents/: orchestrator.py  state.py
src/agents/tools/: code_exec_tool.py  rag_tool.py  web_search_tool.py
src/api/: dependencies.py  main.py
src/api/routes/: agent.py  documents.py  health.py  query.py
src/core/: config.py  interfaces.py  llm_client.py  models.py
src/mcp/: server.py
src/observability/: logging.py  metrics.py  tracing.py
src/rag/generation/: generator.py
src/rag/indexing/: chunker.py  embedder.py  loader.py  pipeline.py
src/rag/retrieval/: bm25.py  hybrid.py  reranker.py  vector_store.py
src/security/: guardrails.py  prompt_shield.py  rbac.py
tests/evaluation/: ragas_suite.py
tests/unit/agents/: test_code_exec.py  test_orchestrator.py  test_rag_tool.py  test_state.py  test_web_search.py
tests/unit/api/: test_agent_route.py  test_dependencies.py  test_documents_route.py  test_health.py  test_query_route.py
tests/unit/core/: test_llm_client.py
tests/unit/mcp/: test_server.py
tests/unit/observability/: test_logging.py  test_metrics.py  test_tracing.py
tests/unit/rag/: test_bm25.py  test_chunker.py  test_embedder.py  test_generator.py  test_hybrid.py  test_loader.py  test_pipeline.py  test_reranker.py  test_vector_store.py
tests/unit/security/: test_guardrails.py  test_prompt_shield.py  test_rbac.py
